force-app/main/default/objects/custom_create292__c/custom_create292__c.object-meta.xml
<CustomObject>
    <label>Custom created object292</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects292</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>