force-app/main/default/objects/custom_create292__c/fields/custom_create_292field586__c.field-meta.xml
<CustomField>
    <fullName>custom_create_292field586__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 292field586</label>
    <type>Checkbox</type>
</CustomField>